@@ -1,4 +1,4 @@
-EBUILD calculate-install-2.2.0.0_p20100811-r1.ebuild 726 RMD160 ee3c10444104304e143d58ba8c625e3011d95529 SHA1 627c76a66c59dfe897946fbb460b43bfe8b74d1b SHA256 27ef654f187984daae5264d36aff128a1da96395a917499f4602e110a8be5e44
-EBUILD calculate-install-2.2.9999.ebuild 750 RMD160 45dc2543c73bb5b9d4762bc1f12caca0bdf45c2e SHA1 9cff4995f0f073785ada709b90ea83c656defd27 SHA256 5c3c3420438796be31b4b29cf47eef846a00572d4549d148fd2e9f9629463852
-MISC ChangeLog 1294 RMD160 9b8414cb8b0f8f976f97f6447b010a4289b4a15a SHA1 e11189981f62026386aa82392cec2ab012c5d57b SHA256 2704e76da1b4099053701b5d9b8055346ecb27d3574679a67eb98be88219849f
+EBUILD calculate-install-2.2.0.0_p20100811-r1.ebuild 516 RMD160 16b4517d06e7e2023bc644f13d6977b8c6db07f5 SHA1 d4723a4506d8c4e560d2d69f3dc35f569ade8098 SHA256 43b0d418d064b99e98a87586434df65d79cdf6629280e325714177f4a0b1c7e1
+EBUILD calculate-install-2.2.9999.ebuild 540 RMD160 038eb80ed7ab1120e6305cbfe2eca480a48aa1c0 SHA1 0cc13d21f94d71f0e6bb6dce3e8abfa1f2f66a4f SHA256 7f9bd4b0b6c2fa260f2e93c78fdee24b32545dc2a98e19363f4933dcc32d3557
+MISC ChangeLog 1491 RMD160 a91790075d5109230b93d8c4b067f39ca229ad67 SHA1 40c3f743fbf4cdd6e6c489dd841a8f927bd7bb5e SHA256 4e53f5726118ea1c1d353bc06d062b851cd697266fa668030c3d4a0154be513f
 MISC metadata.xml 310 RMD160 769e4f17a9354da6b168b72a5d65d978f65bf6dd SHA1 83aaae376052d69c7327e880cf028ebc0dea608b SHA256 c29d3efc676d8308872920db5223c78469db86ac236b5d45c3ee98ceb8fca846
