@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-install-2.2.0.0_p20100811-r1.ebuild,
+  calculate-install-2.2.9999.ebuild:
+  Remove auto runlevel boot for calculate daemon.
+
 *calculate-install-2.2.0.0_p20100811-r1 (12 Aug 2010)
 
   12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
